OLS-UI build scrollbar for OLS, Menu, fix search Tippy warning, add OLS logo

--- a/OLS-UI/ols-ui/src/components/GlobalStyles/GlobalStyles.scss
+++ b/OLS-UI/ols-ui/src/components/GlobalStyles/GlobalStyles.scss
@@ -8,6 +8,9 @@
     --white: #fff;
     --text-color: #333;
 
+    // font falmily 
+    --font-family: 'Montserrat', 'sans-serif';
+
     // Default layout
     --default-layout-header-height: 60px;
     --default-layout-header-width: 1150px;
@@ -25,14 +28,45 @@ html {
 }
 
 body {
-    font-family: 'Montserrat', 'sans-serif';
+    font-family: var(--font-family);
     font-size: 1.6rem;
     line-height: 1.5;
     text-rendering: optimizeSpeed;
     color: var(--text-color);
+    overflow-y: overlay;
 }
 
-button, input, [tabindex] {
+// crollbar css tiktok
+html ::-webkit-scrollbar {
+    border-radius: 0px;
+    width: 8px;
+}
+html *::-webkit-scrollbar {
+    border-radius: 0;
+    width: 8px;
+}
+
+html ::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(22, 24, 35, 0.06);
+}
+html *::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background-color: rgba(22, 24, 35, .06);
+}
+
+html ::-webkit-scrollbar-track {
+    border-radius: 0px;
+    background-color: rgba(0, 0, 0, 0);
+}
+html *::-webkit-scrollbar-track {
+    border-radius: 0;
+    background-color: rgba(0, 0, 0, 0);
+}
+
+button, 
+input, 
+[tabindex] {
     outline: none;
     border: none;
 }
