--- a/OLS-UI/ols-ui/src/components/Layouts/components/Header/Header.module.scss
+++ b/OLS-UI/ols-ui/src/components/Layouts/components/Header/Header.module.scss
@@ -5,11 +5,20 @@
     --search-top-spacer: 10px;
     --search-button-width: 52px;
 
+    // sap xep 
+    // posistion
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 10; // set khoảng - chưa hiểu lắm 
+    // display
+    display: flex;
+    justify-content: center;
+    // box model 
     width: 100%;
     height: var(--default-layout-header-height, 60px);
     box-shadow: 0px 1px 1px rgb(0 0 0 / 12%);
-    display: flex;
-    justify-content: center;
+    background-color: var(--white);
 }
 
 .inner {
@@ -19,6 +28,11 @@
     display: flex; // df + tab 
     align-items: center;
     justify-content: space-between;
+}
+
+// logo
+.logo-link {
+    display: flex;
 }
 
 // Actions 
